Wrap LinkHistoryItem's pre to prevent overflow. Fixes #1

--- a/src/components/LinkHistoryItem/LinkHistoryItem.module.css
+++ b/src/components/LinkHistoryItem/LinkHistoryItem.module.css
@@ -8,8 +8,9 @@
 
   pre {
     font-family: var(--font-mono);
-    overflow-x: auto;
     padding: 0 1.25rem;
+    white-space: pre-wrap;
+    word-break: break-all;
   }
 
   button {
